// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component should be a subtitle with size rendered as P 1`] = `
<DocumentFragment>
  <p
    class="subtitle is-3"
  >
    Subtitle
  </p>
</DocumentFragment>
`;

exports[`Heading component should be spaced 1`] = `
<DocumentFragment>
  <p
    class="title is-spaced"
  >
    Subtitle
  </p>
</DocumentFragment>
`;

exports[`Heading component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <h1
    class="other-class this-is-a-test title"
  />
</DocumentFragment>
`;

exports[`Heading component should not be spaced because is subtitle 1`] = `
<DocumentFragment>
  <p
    class="subtitle"
  >
    Subtitle
  </p>
</DocumentFragment>
`;

exports[`Heading component should render 1`] = `
<DocumentFragment>
  <h1
    class="title"
  />
</DocumentFragment>
`;

exports[`Heading component should use inline styles 1`] = `
<DocumentFragment>
  <h1
    class="title"
    style="height: 250px;"
  />
</DocumentFragment>
`;
